wip(api/index): create index
